test/Fail/Issue721c.err
Issue721c.agda:20.30-31: error: [UnequalTerms]
Bool !=< (t ≡ t)
when checking that the expression t has type t ≡ t
